fixed post card size on mobile / heroku push / switching computers

--- a/client/src/components/PostCard/post-card.scss
+++ b/client/src/components/PostCard/post-card.scss
@@ -1,3 +1,44 @@
+// MEDIA QUERY MIXINS
+ 
+// Small tablets and large smartphones (landscape view)
+$screen-sm-min: 576px;
+ 
+// Small tablets (portrait view)
+$screen-md-min: 768px;
+ 
+// Tablets and small desktops
+$screen-lg-min: 992px;
+ 
+// Large tablets and desktops
+$screen-xl-min: 1200px;
+ 
+// Small devices
+@mixin sm {
+    @media (max-width: #{$screen-sm-min}) {
+      @content;
+    }
+  }
+   
+  // Medium devices
+  @mixin md {
+    @media (max-width: #{$screen-md-min}) {
+      @content;
+    }
+  }
+   
+  // Large devices
+  @mixin lg {
+    @media (max-width: #{$screen-lg-min}) {
+      @content;
+    }
+  }
+   
+  // Extra large devices
+  @mixin xl {
+    @media (max-width: #{$screen-xl-min}) {
+      @content;
+    }
+  }
 .post-card{
     background: #1f1f1f;
     padding: 0px 10px 10px 10px;
@@ -6,6 +47,9 @@
     margin: 0 auto;
     margin-bottom: 10px;
     position: relative;
+    @include sm{
+        width: 100%;
+    }
     .delete-button{
         position: absolute;
         font-size: 18px;
